# EdgeDetection

./: Readme.md  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgedetectionapp/: CameraManager.kt  MainActivity.kt  NativeProcessor.kt
app/src/main/res/layout/: activity_main.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
web/: app.js  app.ts  index.html  package-lock.json  package.json  style.css  tsconfig.json
